fixing long text button overflow

--- a/src/modules/searchbar/styles.module.scss
+++ b/src/modules/searchbar/styles.module.scss
@@ -1,15 +1,20 @@
 .main {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   max-height: 100px;
   margin: 0 auto;
-  width: clamp(400px, 80%, 800px);
+  width: clamp(350px, 80vw, 1600px);
+
+  & > p {
+    margin-right: 50px;
+  }
 
   .searchBox {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: clamp(150px, 80vw, 800px);
 
     svg {
       width: 15px;
@@ -19,8 +24,9 @@
     
     input {
       padding-left: 40px;
+      padding-right: 110px;
       border-radius: 10px;
-      width: clamp(350px, 33vw, 750px);
+      width: clamp(300px, 80%, 750px);
       height: 50px;
       background-color: #FFFFFF;
       box-shadow: 0 1px 2px -1px #C8CAD1;
@@ -40,7 +46,7 @@
     }
 
     button {
-      transform: translateX(-110px);
+      transform: translateX(-90px);
       cursor: pointer;
     }
   }
